# HW_7_python_web

./: .gitignore  README.md  alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 2378e6ae314a_init.py  6e7661b0a9c3_init.py  6f9eef1dff97_init.py
