[tool.poetry]
name = "hw-7-python-web"
version = "0.1.0"
description = ""
authors = ["Olga Mageria <olgamageria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
faker = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
